@@ -1,3 +1,8 @@
+2006-03-17  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/testlet/java/security/BasicPermission/newPermission.java:
+	New test.
+
 2006-03-16  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* gnu/testlet/java/awt/FontMetrics/TestLogicalFontMetrics.java:
